--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 project(eye-detect)
 find_package(OpenCV REQUIRED)
-add_executable(eye-detect main.cpp neural-network/NeuralNetwork.cpp neural-network/NeuralNetwork.h)
+add_executable(eye-detect src/calibrate.cpp src/NeuralNetwork.cpp src/NeuralNetwork.h)
 target_link_libraries(eye-detect ${OpenCV_LIBS})
